--- a/chrometest/popup.html
+++ b/chrometest/popup.html
@@ -1,12 +1,24 @@
+
 <!doctype html>
 <html>
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>GTmetrix Analyzer</title>
   </head>
   <body>
-    <h1>GTmetrix Analyzer</h1>
-    <button id="record_now">记录当前页</button>
-    <button id="record_auto">自动记录</button>自动记录当前域名下最后访问
+    <div id="logIn" style="display:none;">
+      用户名:<input type="text" />
+      <button id="login">log in</button>
+    </div>
+    <div id="record">
+      <h1>GTmetrix Analyzer</h1>
+      <button id="record_now">记录当前页</button>
+      <button id="record_auto">自动记录</button>
+      <button id="record_t">aaaaa</button>
+    </div>
+    <div id="logOut" style="display:none;">
+      <a href="javascript:;">log out</a>
+    </div>
   </body>
   <script src="popup.js"></script>
 </html>
